--- a/main/anime.html
+++ b/main/anime.html
@@ -14,10 +14,10 @@
       </marquee>
     </header>
     <main>
-      <section id="cards"></section>
+      <section id="cards" class="cards"></section>
       <section>
         <article class="cont">
-          <button><a href="/otros/+18.html">Ver mas</a></button>
+          <a href="/otros/+18.html" class="aaa">Ver mas</a>
         </article>
       </section>
     </main>
