--- a/main/anime.html
+++ b/main/anime.html
@@ -14,7 +14,9 @@
       </marquee>
     </header>
     <main>
+      <!--  -->
       <section id="cards" class="cards"></section>
+      <!--  -->
       <section>
         <article class="cont">
           <a href="/otros/+18.html" class="aaa">Ver mas</a>
@@ -22,5 +24,6 @@
       </section>
     </main>
     <script src="./main.js" type="module"></script>
+    <script src="./slider.js"></script>
   </body>
 </html>
